<resources>
    <string name="app_name">Nearby Hospital</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="registrar">Registrarse</string>
    <string name="emergencia">Emergencia</string>
    <string name="nombre">Nombre Completo</string>
    <string name="documento">Número de documento</string>
    <string name="subaunafoto">Suba una foto</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="seleccione_sexo">   Sexo:</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="n_telefono">Número de teléfono</string>
    <string name="sangre">   Tipo de sangre:</string>
    <string name="repetir_contrasena">Repetir Contraseña</string>
    <string name="alergias">Alergias</string>
    <string name="enfermedades">Enfermedades</string>
    <string name="acudiente">Nombre del acudiente</string>
    <string name="t_acudiente">Teléfono del acudiente</string>
    <string name="enviar">Enviar</string>
    <string name="correo">Correo Electrónico</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_perfil_drawer">PerfilDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="title_activity_maps">Map</string>
</resources>
