<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#9f3730"
    tools:context="com.juandaqugo.hospitalnearby.RegistroActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/nombre"
            android:id="@+id/enombre"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/documento"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:id="@+id/edocumento"
            android:inputType="numberDecimal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text=" Sexo:"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp" />
            <RadioGroup
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/masculino"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textColorHint="@color/white"
                    android:id="@+id/rmasculino"
                    android:checked="true"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/femenino"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:id="@+id/rfemenino"
                    android:checked="false"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text=" Tipo de Sangre:"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <Spinner
                android:id="@+id/ListaDesple"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_weight="1" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/n_telefono"
            android:id="@+id/etelefono"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginTop="5dp"
            android:inputType="numberDecimal"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/correo"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:id="@+id/ecorreo"
            android:inputType="textEmailAddress"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text=" EPS:"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:textSize="18sp" />
            <Spinner
                android:id="@+id/ListaDesple2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_weight="1" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textAlignment="gravity"
            android:hint="@string/alergias"
            android:background="@color/white"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:id="@+id/ealergias"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textAlignment="viewStart"
            android:background="@color/white"
            android:textColor="@color/black"
            android:hint="@string/enfermedades"
            android:id="@+id/eenfermedades"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/acudiente"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:id="@+id/enombre_acudiente"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/t_acudiente"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:id="@+id/etelefono_acudiente"
            android:inputType="numberDecimal"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="Ingrese una contraseña"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:id="@+id/econtrasenar"
            android:inputType="textPassword"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/repetir_contrasena"
            android:id="@+id/econtrasenarep"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/activity_registro1"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/subaunafoto"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="18sp" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@drawable/boton_redon"
                    android:id="@+id/bselector"
                    android:text="@string/seleccionar"
                    android:layout_margin="@dimen/activity_vertical_margin"/>
            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/ifoto"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:background="@drawable/boton_redon"
                android:text="@string/enviar"
                android:layout_marginRight="10dp"
                android:id="@+id/benviar"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/cancelar"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:background="@drawable/boton_redon"
                android:id="@+id/bcancelar"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
